added table structure in HTML

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,6 +30,85 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <table class="table">
+        <tr>
+          <td>9AM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr>
+        <tr>
+          <td>10AM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr>
+        <tr>
+          <td>11AM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr>
+        <tr>
+          <td>12PM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr>
+        <tr>
+          <td>1PM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr><tr>
+          <td>2PM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr><tr>
+          <td>3PM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr><tr>
+          <td>4PM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr><tr>
+          <td>5PM</td>
+          <td>
+            <textarea></textarea>
+          </td>
+          <td>
+            <button>Save</button>
+          </td>
+        </tr>
+      </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
