added local storage

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,83 +34,82 @@
         <tr>
           <td>9AM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr>
         <tr>
           <td>10AM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr>
         <tr>
           <td>11AM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr>
         <tr>
           <td>12PM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr>
         <tr>
           <td>1PM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr><tr>
           <td>2PM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr><tr>
           <td>3PM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr><tr>
           <td>4PM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr><tr>
           <td>5PM</td>
           <td>
-            <textarea></textarea>
+            <textarea id="textInput"></textarea>
           </td>
           <td>
-            <button>Save</button>
+            <button id="saveBtn">Save</button>
           </td>
         </tr>
       </table>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./script.js"></script>
