--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,117 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-      <table class="table">
-        <tr>
-          <td>9AM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr>
-        <tr>
-          <td>10AM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr>
-        <tr>
-          <td>11AM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr>
-        <tr>
-          <td>12PM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr>
-        <tr>
-          <td>1PM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr><tr>
-          <td>2PM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr><tr>
-          <td>3PM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr><tr>
-          <td>4PM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr><tr>
-          <td>5PM</td>
-          <td>
-            <textarea id="textInput"></textarea>
-          </td>
-          <td>
-            <button id="saveBtn">Save</button>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <!-- Timeblocks go here -->
+    <table class="table">
+      <tr class="block" id="9">
+        <td>9AM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="10">
+        <td>10AM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="11">
+        <td>11AM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="12">
+        <td>12PM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="13">
+        <td>1PM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="14">
+        <td>2PM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="15">
+        <td>3PM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="16">
+        <td>4PM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+      <tr class="block" id="17">
+        <td>5PM</td>
+        <td>
+          <textarea class="textInput"></textarea>
+        </td>
+        <td>
+          <button class ="saveBtn">Save</button>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./script.js"></script>
+</body>
+
 </html>
